Auto-resolve PSR type codes to human-readable names
The parser now maps codes like B16 to "Solar" automatically.
Removes manual PSR_TYPES mapping from all example notebooks.

--- a/examples/generation.ipynb
+++ b/examples/generation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ea6fecba",
+   "id": "2640e135",
    "metadata": {},
    "source": [
     "# Generation Data — ENTSO-E Examples\n",
@@ -13,13 +13,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5c3dc76d",
+   "id": "16296f0a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T14:55:21.254562Z",
-     "iopub.status.busy": "2026-02-15T14:55:21.254442Z",
-     "iopub.status.idle": "2026-02-15T14:55:21.750174Z",
-     "shell.execute_reply": "2026-02-15T14:55:21.749635Z"
+     "iopub.execute_input": "2026-02-15T15:03:29.543713Z",
+     "iopub.status.busy": "2026-02-15T15:03:29.543621Z",
+     "iopub.status.idle": "2026-02-15T15:03:29.980381Z",
+     "shell.execute_reply": "2026-02-15T15:03:29.979850Z"
     }
    },
    "outputs": [],
@@ -28,14 +28,13 @@
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
     "from entsoe import Client\n",
-    "from entsoe._mappings import PSR_TYPES\n",
     "\n",
     "client = Client()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dd27217e",
+   "id": "3d3741de",
    "metadata": {},
    "source": [
     "## 1. Generation Mix — France (1 week)"
@@ -44,13 +43,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dd16b8fb",
+   "id": "f92150dc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T14:55:21.753398Z",
-     "iopub.status.busy": "2026-02-15T14:55:21.753224Z",
-     "iopub.status.idle": "2026-02-15T14:55:23.178158Z",
-     "shell.execute_reply": "2026-02-15T14:55:23.177381Z"
+     "iopub.execute_input": "2026-02-15T15:03:29.982059Z",
+     "iopub.status.busy": "2026-02-15T15:03:29.981919Z",
+     "iopub.status.idle": "2026-02-15T15:03:31.590248Z",
+     "shell.execute_reply": "2026-02-15T15:03:31.589786Z"
     }
    },
    "outputs": [
@@ -79,7 +78,6 @@
        "      <th>value</th>\n",
        "      <th>psr_type</th>\n",
        "      <th>quantity_unit</th>\n",
-       "      <th>fuel</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -87,60 +85,48 @@
        "      <th>0</th>\n",
        "      <td>2024-05-31 22:00:00+00:00</td>\n",
        "      <td>345.0</td>\n",
-       "      <td>B04</td>\n",
-       "      <td>MAW</td>\n",
        "      <td>Fossil Gas</td>\n",
+       "      <td>MAW</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2024-05-31 22:00:00+00:00</td>\n",
        "      <td>35814.0</td>\n",
-       "      <td>B14</td>\n",
-       "      <td>MAW</td>\n",
        "      <td>Nuclear</td>\n",
+       "      <td>MAW</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2024-05-31 22:00:00+00:00</td>\n",
        "      <td>691.0</td>\n",
-       "      <td>B18</td>\n",
-       "      <td>MAW</td>\n",
        "      <td>Wind Offshore</td>\n",
+       "      <td>MAW</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2024-05-31 22:00:00+00:00</td>\n",
        "      <td>194.0</td>\n",
-       "      <td>B17</td>\n",
-       "      <td>MAW</td>\n",
        "      <td>Waste</td>\n",
+       "      <td>MAW</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2024-05-31 22:00:00+00:00</td>\n",
        "      <td>2024.0</td>\n",
-       "      <td>B12</td>\n",
-       "      <td>MAW</td>\n",
        "      <td>Hydro Water Reservoir</td>\n",
+       "      <td>MAW</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  timestamp    value psr_type quantity_unit  \\\n",
-       "0 2024-05-31 22:00:00+00:00    345.0      B04           MAW   \n",
-       "1 2024-05-31 22:00:00+00:00  35814.0      B14           MAW   \n",
-       "2 2024-05-31 22:00:00+00:00    691.0      B18           MAW   \n",
-       "3 2024-05-31 22:00:00+00:00    194.0      B17           MAW   \n",
-       "4 2024-05-31 22:00:00+00:00   2024.0      B12           MAW   \n",
-       "\n",
-       "                    fuel  \n",
-       "0             Fossil Gas  \n",
-       "1                Nuclear  \n",
-       "2          Wind Offshore  \n",
-       "3                  Waste  \n",
-       "4  Hydro Water Reservoir  "
+       "                  timestamp    value               psr_type quantity_unit\n",
+       "0 2024-05-31 22:00:00+00:00    345.0             Fossil Gas           MAW\n",
+       "1 2024-05-31 22:00:00+00:00  35814.0                Nuclear           MAW\n",
+       "2 2024-05-31 22:00:00+00:00    691.0          Wind Offshore           MAW\n",
+       "3 2024-05-31 22:00:00+00:00    194.0                  Waste           MAW\n",
+       "4 2024-05-31 22:00:00+00:00   2024.0  Hydro Water Reservoir           MAW"
       ]
      },
      "execution_count": 2,
@@ -153,20 +139,19 @@
     "end = \"2024-06-08\"\n",
     "\n",
     "df_gen = client.generation.actual(start, end, country=\"FR\")\n",
-    "df_gen[\"fuel\"] = df_gen[\"psr_type\"].map(PSR_TYPES)\n",
     "df_gen.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "22895449",
+   "id": "db675502",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T14:55:23.183203Z",
-     "iopub.status.busy": "2026-02-15T14:55:23.183026Z",
-     "iopub.status.idle": "2026-02-15T14:55:24.170548Z",
-     "shell.execute_reply": "2026-02-15T14:55:24.169698Z"
+     "iopub.execute_input": "2026-02-15T15:03:31.593561Z",
+     "iopub.status.busy": "2026-02-15T15:03:31.593430Z",
+     "iopub.status.idle": "2026-02-15T15:03:32.451343Z",
+     "shell.execute_reply": "2026-02-15T15:03:32.450813Z"
     }
    },
    "outputs": [
@@ -181,7 +166,7 @@
          "fillpattern": {
           "shape": ""
          },
-         "hovertemplate": "fuel=Fossil Gas<br>=%{x}<br>Generation (MW)=%{y}<extra></extra>",
+         "hovertemplate": "psr_type=Fossil Gas<br>=%{x}<br>Generation (MW)=%{y}<extra></extra>",
          "legendgroup": "Fossil Gas",
          "line": {
           "color": "#636efa"
@@ -371,7 +356,7 @@
          "fillpattern": {
           "shape": ""
          },
-         "hovertemplate": "fuel=Nuclear<br>=%{x}<br>Generation (MW)=%{y}<extra></extra>",
+         "hovertemplate": "psr_type=Nuclear<br>=%{x}<br>Generation (MW)=%{y}<extra></extra>",
          "legendgroup": "Nuclear",
          "line": {
           "color": "#EF553B"
@@ -566,7 +551,7 @@
          "fillpattern": {
           "shape": ""
          },
-         "hovertemplate": "fuel=Wind Offshore<br>=%{x}<br>Generation (MW)=%{y}<extra></extra>",
+         "hovertemplate": "psr_type=Wind Offshore<br>=%{x}<br>Generation (MW)=%{y}<extra></extra>",
          "legendgroup": "Wind Offshore",
          "line": {
           "color": "#00cc96"
@@ -758,7 +743,7 @@
          "fillpattern": {
           "shape": ""
          },
-         "hovertemplate": "fuel=Waste<br>=%{x}<br>Generation (MW)=%{y}<extra></extra>",
+         "hovertemplate": "psr_type=Waste<br>=%{x}<br>Generation (MW)=%{y}<extra></extra>",
          "legendgroup": "Waste",
          "line": {
           "color": "#ab63fa"
@@ -925,7 +910,7 @@
          "fillpattern": {
           "shape": ""
          },
-         "hovertemplate": "fuel=Hydro Water Reservoir<br>=%{x}<br>Generation (MW)=%{y}<extra></extra>",
+         "hovertemplate": "psr_type=Hydro Water Reservoir<br>=%{x}<br>Generation (MW)=%{y}<extra></extra>",
          "legendgroup": "Hydro Water Reservoir",
          "line": {
           "color": "#FFA15A"
@@ -1119,7 +1104,7 @@
          "fillpattern": {
           "shape": ""
          },
-         "hovertemplate": "fuel=Hydro Run-of-river and poundage<br>=%{x}<br>Generation (MW)=%{y}<extra></extra>",
+         "hovertemplate": "psr_type=Hydro Run-of-river and poundage<br>=%{x}<br>Generation (MW)=%{y}<extra></extra>",
          "legendgroup": "Hydro Run-of-river and poundage",
          "line": {
           "color": "#19d3f3"
@@ -1314,7 +1299,7 @@
          "fillpattern": {
           "shape": ""
          },
-         "hovertemplate": "fuel=Hydro Pumped Storage<br>=%{x}<br>Generation (MW)=%{y}<extra></extra>",
+         "hovertemplate": "psr_type=Hydro Pumped Storage<br>=%{x}<br>Generation (MW)=%{y}<extra></extra>",
          "legendgroup": "Hydro Pumped Storage",
          "line": {
           "color": "#FF6692"
@@ -1509,7 +1494,7 @@
          "fillpattern": {
           "shape": ""
          },
-         "hovertemplate": "fuel=Solar<br>=%{x}<br>Generation (MW)=%{y}<extra></extra>",
+         "hovertemplate": "psr_type=Solar<br>=%{x}<br>Generation (MW)=%{y}<extra></extra>",
          "legendgroup": "Solar",
          "line": {
           "color": "#B6E880"
@@ -1663,7 +1648,7 @@
          "fillpattern": {
           "shape": ""
          },
-         "hovertemplate": "fuel=Biomass<br>=%{x}<br>Generation (MW)=%{y}<extra></extra>",
+         "hovertemplate": "psr_type=Biomass<br>=%{x}<br>Generation (MW)=%{y}<extra></extra>",
          "legendgroup": "Biomass",
          "line": {
           "color": "#FF97FF"
@@ -1816,7 +1801,7 @@
          "fillpattern": {
           "shape": ""
          },
-         "hovertemplate": "fuel=Fossil Oil<br>=%{x}<br>Generation (MW)=%{y}<extra></extra>",
+         "hovertemplate": "psr_type=Fossil Oil<br>=%{x}<br>Generation (MW)=%{y}<extra></extra>",
          "legendgroup": "Fossil Oil",
          "line": {
           "color": "#FECB52"
@@ -1912,7 +1897,7 @@
          "fillpattern": {
           "shape": ""
          },
-         "hovertemplate": "fuel=Fossil Hard coal<br>=%{x}<br>Generation (MW)=%{y}<extra></extra>",
+         "hovertemplate": "psr_type=Fossil Hard coal<br>=%{x}<br>Generation (MW)=%{y}<extra></extra>",
          "legendgroup": "Fossil Hard coal",
          "line": {
           "color": "#636efa"
@@ -1940,7 +1925,7 @@
          "fillpattern": {
           "shape": ""
          },
-         "hovertemplate": "fuel=Wind Onshore<br>=%{x}<br>Generation (MW)=%{y}<extra></extra>",
+         "hovertemplate": "psr_type=Wind Onshore<br>=%{x}<br>Generation (MW)=%{y}<extra></extra>",
          "legendgroup": "Wind Onshore",
          "line": {
           "color": "#EF553B"
@@ -2947,7 +2932,7 @@
    ],
    "source": [
     "fig = px.area(\n",
-    "    df_gen, x=\"timestamp\", y=\"value\", color=\"fuel\",\n",
+    "    df_gen, x=\"timestamp\", y=\"value\", color=\"psr_type\",\n",
     "    title=\"Generation Mix — France\",\n",
     "    labels={\"value\": \"Generation (MW)\", \"timestamp\": \"\"},\n",
     ")\n",
@@ -2957,7 +2942,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbfe8228",
+   "id": "b73da35a",
    "metadata": {},
    "source": [
     "## 2. Generation Share (Pie Chart)"
@@ -2966,13 +2951,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "486494fc",
+   "id": "a0c499e8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T14:55:24.177557Z",
-     "iopub.status.busy": "2026-02-15T14:55:24.177356Z",
-     "iopub.status.idle": "2026-02-15T14:55:24.203862Z",
-     "shell.execute_reply": "2026-02-15T14:55:24.203168Z"
+     "iopub.execute_input": "2026-02-15T15:03:32.453493Z",
+     "iopub.status.busy": "2026-02-15T15:03:32.453341Z",
+     "iopub.status.idle": "2026-02-15T15:03:32.471667Z",
+     "shell.execute_reply": "2026-02-15T15:03:32.471015Z"
     }
    },
    "outputs": [
@@ -2994,7 +2979,7 @@
            1.0
           ]
          },
-         "hovertemplate": "fuel=%{label}<br>value=%{value}<extra></extra>",
+         "hovertemplate": "psr_type=%{label}<br>value=%{value}<extra></extra>",
          "labels": [
           "Biomass",
           "Fossil Gas",
@@ -3809,11 +3794,11 @@
     }
    ],
    "source": [
-    "totals = df_gen.groupby(\"fuel\")[\"value\"].sum().reset_index()\n",
+    "totals = df_gen.groupby(\"psr_type\")[\"value\"].sum().reset_index()\n",
     "totals = totals[totals[\"value\"] > 0]\n",
     "\n",
     "fig = px.pie(\n",
-    "    totals, names=\"fuel\", values=\"value\",\n",
+    "    totals, names=\"psr_type\", values=\"value\",\n",
     "    title=\"Generation Share — France, 1-8 Jun 2024\",\n",
     ")\n",
     "fig.show()"
@@ -3821,7 +3806,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "242198dd",
+   "id": "6aec5449",
    "metadata": {},
    "source": [
     "## 3. Solar vs Wind — Daily Patterns"
@@ -3830,13 +3815,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "014f67c3",
+   "id": "8f237fd1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T14:55:24.205925Z",
-     "iopub.status.busy": "2026-02-15T14:55:24.205803Z",
-     "iopub.status.idle": "2026-02-15T14:55:24.998989Z",
-     "shell.execute_reply": "2026-02-15T14:55:24.998470Z"
+     "iopub.execute_input": "2026-02-15T15:03:32.472950Z",
+     "iopub.status.busy": "2026-02-15T15:03:32.472836Z",
+     "iopub.status.idle": "2026-02-15T15:03:33.698060Z",
+     "shell.execute_reply": "2026-02-15T15:03:33.697567Z"
     }
    },
    "outputs": [
@@ -3848,7 +3833,7 @@
        },
        "data": [
         {
-         "hovertemplate": "fuel=Solar<br>=%{x}<br>Generation (MW)=%{y}<extra></extra>",
+         "hovertemplate": "psr_type=Solar<br>=%{x}<br>Generation (MW)=%{y}<extra></extra>",
          "legendgroup": "Solar",
          "line": {
           "color": "#636efa",
@@ -3927,7 +3912,7 @@
          "yaxis": "y"
         },
         {
-         "hovertemplate": "fuel=Wind Onshore<br>=%{x}<br>Generation (MW)=%{y}<extra></extra>",
+         "hovertemplate": "psr_type=Wind Onshore<br>=%{x}<br>Generation (MW)=%{y}<extra></extra>",
          "legendgroup": "Wind Onshore",
          "line": {
           "color": "#EF553B",
@@ -4026,7 +4011,7 @@
        "layout": {
         "legend": {
          "title": {
-          "text": "fuel"
+          "text": "psr_type"
          },
          "tracegroupgap": 0
         },
@@ -4841,15 +4826,12 @@
     "end = \"2024-06-06\"\n",
     "\n",
     "df_solar = client.generation.actual(start, end, country=\"FR\", psr_type=\"B16\")\n",
-    "df_solar[\"fuel\"] = \"Solar\"\n",
-    "\n",
     "df_wind = client.generation.actual(start, end, country=\"FR\", psr_type=\"B19\")\n",
-    "df_wind[\"fuel\"] = \"Wind Onshore\"\n",
     "\n",
     "df_ren = pd.concat([df_solar, df_wind], ignore_index=True)\n",
     "\n",
     "fig = px.line(\n",
-    "    df_ren, x=\"timestamp\", y=\"value\", color=\"fuel\",\n",
+    "    df_ren, x=\"timestamp\", y=\"value\", color=\"psr_type\",\n",
     "    title=\"Solar vs Wind Onshore — France\",\n",
     "    labels={\"value\": \"Generation (MW)\", \"timestamp\": \"\"},\n",
     ")\n",
@@ -4858,7 +4840,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e036375c",
+   "id": "1c799985",
    "metadata": {},
    "source": [
     "## 4. Wind & Solar Forecast vs Actual"
@@ -4867,13 +4849,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "755729db",
+   "id": "f9cdcfef",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T14:55:25.000739Z",
-     "iopub.status.busy": "2026-02-15T14:55:25.000622Z",
-     "iopub.status.idle": "2026-02-15T14:55:25.535725Z",
-     "shell.execute_reply": "2026-02-15T14:55:25.534878Z"
+     "iopub.execute_input": "2026-02-15T15:03:33.699582Z",
+     "iopub.status.busy": "2026-02-15T15:03:33.699465Z",
+     "iopub.status.idle": "2026-02-15T15:03:34.441880Z",
+     "shell.execute_reply": "2026-02-15T15:03:34.441023Z"
     }
    },
    "outputs": [
@@ -5819,10 +5801,9 @@
    ],
    "source": [
     "df_forecast = client.generation.forecast(start, end, country=\"FR\")\n",
-    "df_forecast[\"fuel\"] = df_forecast[\"psr_type\"].map(PSR_TYPES)\n",
     "\n",
     "# Compare solar\n",
-    "df_solar_fc = df_forecast[df_forecast[\"psr_type\"] == \"B16\"]\n",
+    "df_solar_fc = df_forecast[df_forecast[\"psr_type\"] == \"Solar\"]\n",
     "\n",
     "fig = go.Figure()\n",
     "fig.add_trace(go.Scatter(\n",
@@ -5843,7 +5824,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4b3c15e",
+   "id": "fde9c4ce",
    "metadata": {},
    "source": [
     "## 5. Installed Capacity by Type"
@@ -5852,13 +5833,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f1b3e35b",
+   "id": "39469f0e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T14:55:25.537938Z",
-     "iopub.status.busy": "2026-02-15T14:55:25.537835Z",
-     "iopub.status.idle": "2026-02-15T14:55:25.921901Z",
-     "shell.execute_reply": "2026-02-15T14:55:25.921235Z"
+     "iopub.execute_input": "2026-02-15T15:03:34.443826Z",
+     "iopub.status.busy": "2026-02-15T15:03:34.443686Z",
+     "iopub.status.idle": "2026-02-15T15:03:34.855524Z",
+     "shell.execute_reply": "2026-02-15T15:03:34.854676Z"
     }
    },
    "outputs": [
@@ -6724,15 +6705,14 @@
     "end = \"2024-12-31\"\n",
     "\n",
     "df_cap = client.generation.installed_capacity(start, end, country=\"FR\")\n",
-    "df_cap[\"fuel\"] = df_cap[\"psr_type\"].map(PSR_TYPES)\n",
     "\n",
-    "latest = df_cap.sort_values(\"timestamp\").groupby(\"fuel\").last().reset_index()\n",
+    "latest = df_cap.sort_values(\"timestamp\").groupby(\"psr_type\").last().reset_index()\n",
     "latest = latest[latest[\"value\"] > 0].sort_values(\"value\", ascending=True)\n",
     "\n",
     "fig = px.bar(\n",
-    "    latest, x=\"value\", y=\"fuel\", orientation=\"h\",\n",
+    "    latest, x=\"value\", y=\"psr_type\", orientation=\"h\",\n",
     "    title=\"Installed Generation Capacity — France, 2024\",\n",
-    "    labels={\"value\": \"Capacity (MW)\", \"fuel\": \"\"},\n",
+    "    labels={\"value\": \"Capacity (MW)\", \"psr_type\": \"\"},\n",
     ")\n",
     "fig.show()"
    ]
