--- a/examples/generation_per_plant.ipynb
+++ b/examples/generation_per_plant.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ad7caf8b",
+   "id": "016343ca",
    "metadata": {},
    "source": [
     "# Generation per Plant — ENTSO-E Examples\n",
@@ -15,13 +15,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "160068f0",
+   "id": "46935dca",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T14:55:27.177145Z",
-     "iopub.status.busy": "2026-02-15T14:55:27.176960Z",
-     "iopub.status.idle": "2026-02-15T14:55:28.268311Z",
-     "shell.execute_reply": "2026-02-15T14:55:28.267495Z"
+     "iopub.execute_input": "2026-02-15T15:03:36.469269Z",
+     "iopub.status.busy": "2026-02-15T15:03:36.469157Z",
+     "iopub.status.idle": "2026-02-15T15:03:37.043295Z",
+     "shell.execute_reply": "2026-02-15T15:03:37.042351Z"
     }
    },
    "outputs": [],
@@ -30,14 +30,13 @@
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
     "from entsoe import Client\n",
-    "from entsoe._mappings import PSR_TYPES\n",
     "\n",
     "client = Client()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "78c5c4df",
+   "id": "3883f141",
    "metadata": {},
    "source": [
     "## 1. All Generation Units — France (1 day)"
@@ -46,13 +45,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0553e2c9",
+   "id": "6f7e021c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T14:55:28.270872Z",
-     "iopub.status.busy": "2026-02-15T14:55:28.270678Z",
-     "iopub.status.idle": "2026-02-15T14:55:31.993787Z",
-     "shell.execute_reply": "2026-02-15T14:55:31.992835Z"
+     "iopub.execute_input": "2026-02-15T15:03:37.045672Z",
+     "iopub.status.busy": "2026-02-15T15:03:37.045472Z",
+     "iopub.status.idle": "2026-02-15T15:03:39.994078Z",
+     "shell.execute_reply": "2026-02-15T15:03:39.993368Z"
     }
    },
    "outputs": [
@@ -83,7 +82,6 @@
        "      <th>unit_eic</th>\n",
        "      <th>unit_name</th>\n",
        "      <th>quantity_unit</th>\n",
-       "      <th>fuel</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -91,130 +89,120 @@
        "      <th>0</th>\n",
        "      <td>2024-06-02 22:00:00+00:00</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>B04</td>\n",
+       "      <td>Fossil Gas</td>\n",
        "      <td>17W000001023725I</td>\n",
        "      <td>FR_LANDIVISIAUGU</td>\n",
        "      <td>MAW</td>\n",
-       "      <td>Fossil Gas</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2024-06-02 22:00:00+00:00</td>\n",
        "      <td>944.0</td>\n",
-       "      <td>B14</td>\n",
+       "      <td>Nuclear</td>\n",
        "      <td>17W100P100P0093C</td>\n",
        "      <td>BLAYAIS 2</td>\n",
        "      <td>MAW</td>\n",
-       "      <td>Nuclear</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2024-06-02 22:00:00+00:00</td>\n",
        "      <td>942.0</td>\n",
-       "      <td>B14</td>\n",
+       "      <td>Nuclear</td>\n",
        "      <td>17W100P100P0094A</td>\n",
        "      <td>BLAYAIS 3</td>\n",
        "      <td>MAW</td>\n",
-       "      <td>Nuclear</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2024-06-02 22:00:00+00:00</td>\n",
        "      <td>707.0</td>\n",
-       "      <td>B14</td>\n",
+       "      <td>Nuclear</td>\n",
        "      <td>17W100P100P00958</td>\n",
        "      <td>BLAYAIS 4</td>\n",
        "      <td>MAW</td>\n",
-       "      <td>Nuclear</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2024-06-02 22:00:00+00:00</td>\n",
        "      <td>900.0</td>\n",
-       "      <td>B14</td>\n",
+       "      <td>Nuclear</td>\n",
        "      <td>17W100P100P00966</td>\n",
        "      <td>BUGEY 2</td>\n",
        "      <td>MAW</td>\n",
-       "      <td>Nuclear</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>2024-06-02 22:00:00+00:00</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>B14</td>\n",
+       "      <td>Nuclear</td>\n",
        "      <td>17W100P100P00982</td>\n",
        "      <td>BUGEY 4</td>\n",
        "      <td>MAW</td>\n",
-       "      <td>Nuclear</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>2024-06-02 22:00:00+00:00</td>\n",
        "      <td>831.0</td>\n",
-       "      <td>B14</td>\n",
+       "      <td>Nuclear</td>\n",
        "      <td>17W100P100P01004</td>\n",
        "      <td>BUGEY 5</td>\n",
        "      <td>MAW</td>\n",
-       "      <td>Nuclear</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>2024-06-02 22:00:00+00:00</td>\n",
        "      <td>1164.0</td>\n",
-       "      <td>B14</td>\n",
+       "      <td>Nuclear</td>\n",
        "      <td>17W100P100P0103Z</td>\n",
        "      <td>CATTENOM 2</td>\n",
        "      <td>MAW</td>\n",
-       "      <td>Nuclear</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>2024-06-02 22:00:00+00:00</td>\n",
        "      <td>886.0</td>\n",
-       "      <td>B14</td>\n",
+       "      <td>Nuclear</td>\n",
        "      <td>17W100P100P0106T</td>\n",
        "      <td>CHINON 1</td>\n",
        "      <td>MAW</td>\n",
-       "      <td>Nuclear</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>2024-06-02 22:00:00+00:00</td>\n",
        "      <td>885.0</td>\n",
-       "      <td>B14</td>\n",
+       "      <td>Nuclear</td>\n",
        "      <td>17W100P100P0107R</td>\n",
        "      <td>CHINON 2</td>\n",
        "      <td>MAW</td>\n",
-       "      <td>Nuclear</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  timestamp   value psr_type          unit_eic  \\\n",
-       "0 2024-06-02 22:00:00+00:00     0.0      B04  17W000001023725I   \n",
-       "1 2024-06-02 22:00:00+00:00   944.0      B14  17W100P100P0093C   \n",
-       "2 2024-06-02 22:00:00+00:00   942.0      B14  17W100P100P0094A   \n",
-       "3 2024-06-02 22:00:00+00:00   707.0      B14  17W100P100P00958   \n",
-       "4 2024-06-02 22:00:00+00:00   900.0      B14  17W100P100P00966   \n",
-       "5 2024-06-02 22:00:00+00:00     0.0      B14  17W100P100P00982   \n",
-       "6 2024-06-02 22:00:00+00:00   831.0      B14  17W100P100P01004   \n",
-       "7 2024-06-02 22:00:00+00:00  1164.0      B14  17W100P100P0103Z   \n",
-       "8 2024-06-02 22:00:00+00:00   886.0      B14  17W100P100P0106T   \n",
-       "9 2024-06-02 22:00:00+00:00   885.0      B14  17W100P100P0107R   \n",
+       "                  timestamp   value    psr_type          unit_eic  \\\n",
+       "0 2024-06-02 22:00:00+00:00     0.0  Fossil Gas  17W000001023725I   \n",
+       "1 2024-06-02 22:00:00+00:00   944.0     Nuclear  17W100P100P0093C   \n",
+       "2 2024-06-02 22:00:00+00:00   942.0     Nuclear  17W100P100P0094A   \n",
+       "3 2024-06-02 22:00:00+00:00   707.0     Nuclear  17W100P100P00958   \n",
+       "4 2024-06-02 22:00:00+00:00   900.0     Nuclear  17W100P100P00966   \n",
+       "5 2024-06-02 22:00:00+00:00     0.0     Nuclear  17W100P100P00982   \n",
+       "6 2024-06-02 22:00:00+00:00   831.0     Nuclear  17W100P100P01004   \n",
+       "7 2024-06-02 22:00:00+00:00  1164.0     Nuclear  17W100P100P0103Z   \n",
+       "8 2024-06-02 22:00:00+00:00   886.0     Nuclear  17W100P100P0106T   \n",
+       "9 2024-06-02 22:00:00+00:00   885.0     Nuclear  17W100P100P0107R   \n",
        "\n",
-       "          unit_name quantity_unit        fuel  \n",
-       "0  FR_LANDIVISIAUGU           MAW  Fossil Gas  \n",
-       "1         BLAYAIS 2           MAW     Nuclear  \n",
-       "2         BLAYAIS 3           MAW     Nuclear  \n",
-       "3         BLAYAIS 4           MAW     Nuclear  \n",
-       "4           BUGEY 2           MAW     Nuclear  \n",
-       "5           BUGEY 4           MAW     Nuclear  \n",
-       "6           BUGEY 5           MAW     Nuclear  \n",
-       "7        CATTENOM 2           MAW     Nuclear  \n",
-       "8          CHINON 1           MAW     Nuclear  \n",
-       "9          CHINON 2           MAW     Nuclear  "
+       "          unit_name quantity_unit  \n",
+       "0  FR_LANDIVISIAUGU           MAW  \n",
+       "1         BLAYAIS 2           MAW  \n",
+       "2         BLAYAIS 3           MAW  \n",
+       "3         BLAYAIS 4           MAW  \n",
+       "4           BUGEY 2           MAW  \n",
+       "5           BUGEY 4           MAW  \n",
+       "6           BUGEY 5           MAW  \n",
+       "7        CATTENOM 2           MAW  \n",
+       "8          CHINON 1           MAW  \n",
+       "9          CHINON 2           MAW  "
       ]
      },
      "execution_count": 2,
@@ -227,20 +215,19 @@
     "end = \"2024-06-04\"\n",
     "\n",
     "df = client.generation.per_plant(start, end, country=\"FR\")\n",
-    "df[\"fuel\"] = df[\"psr_type\"].map(PSR_TYPES)\n",
     "df.head(10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "160e0b70",
+   "id": "a558853b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T14:55:32.000063Z",
-     "iopub.status.busy": "2026-02-15T14:55:31.999900Z",
-     "iopub.status.idle": "2026-02-15T14:55:32.004625Z",
-     "shell.execute_reply": "2026-02-15T14:55:32.003963Z"
+     "iopub.execute_input": "2026-02-15T15:03:40.001086Z",
+     "iopub.status.busy": "2026-02-15T15:03:40.000933Z",
+     "iopub.status.idle": "2026-02-15T15:03:40.006342Z",
+     "shell.execute_reply": "2026-02-15T15:03:40.005686Z"
     }
    },
    "outputs": [
@@ -248,7 +235,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Columns: ['timestamp', 'value', 'psr_type', 'unit_eic', 'unit_name', 'quantity_unit', 'fuel']\n",
+      "Columns: ['timestamp', 'value', 'psr_type', 'unit_eic', 'unit_name', 'quantity_unit']\n",
       "Unique units: 144\n",
       "Fuel types: 10\n",
       "Time range: 2024-06-02 22:00:00+00:00 → 2024-06-03 21:00:00+00:00\n"
@@ -258,13 +245,13 @@
    "source": [
     "print(f\"Columns: {df.columns.tolist()}\")\n",
     "print(f\"Unique units: {df['unit_name'].nunique()}\")\n",
-    "print(f\"Fuel types: {df['fuel'].nunique()}\")\n",
+    "print(f\"Fuel types: {df['psr_type'].nunique()}\")\n",
     "print(f\"Time range: {df['timestamp'].min()} → {df['timestamp'].max()}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5390bf39",
+   "id": "5c651937",
    "metadata": {},
    "source": [
     "## 2. Top 10 Generators by Output"
@@ -273,13 +260,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1fca8c0e",
+   "id": "04babdad",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T14:55:32.006813Z",
-     "iopub.status.busy": "2026-02-15T14:55:32.006690Z",
-     "iopub.status.idle": "2026-02-15T14:55:32.957158Z",
-     "shell.execute_reply": "2026-02-15T14:55:32.956115Z"
+     "iopub.execute_input": "2026-02-15T15:03:40.007406Z",
+     "iopub.status.busy": "2026-02-15T15:03:40.007321Z",
+     "iopub.status.idle": "2026-02-15T15:03:40.931974Z",
+     "shell.execute_reply": "2026-02-15T15:03:40.931291Z"
     }
    },
    "outputs": [
@@ -291,7 +278,7 @@
        },
        "data": [
         {
-         "hovertemplate": "fuel=Nuclear<br>Total Generation (MWh)=%{x}<br>=%{y}<extra></extra>",
+         "hovertemplate": "psr_type=Nuclear<br>Total Generation (MWh)=%{x}<br>=%{y}<extra></extra>",
          "legendgroup": "Nuclear",
          "marker": {
           "color": "#636efa",
@@ -328,7 +315,7 @@
         "barmode": "relative",
         "legend": {
          "title": {
-          "text": "fuel"
+          "text": "psr_type"
          },
          "tracegroupgap": 0
         },
@@ -1141,7 +1128,7 @@
    ],
    "source": [
     "totals = (\n",
-    "    df.groupby([\"unit_name\", \"fuel\"])[\"value\"]\n",
+    "    df.groupby([\"unit_name\", \"psr_type\"])[\"value\"]\n",
     "    .sum()\n",
     "    .reset_index()\n",
     "    .sort_values(\"value\", ascending=False)\n",
@@ -1149,7 +1136,7 @@
     ")\n",
     "\n",
     "fig = px.bar(\n",
-    "    totals, x=\"value\", y=\"unit_name\", color=\"fuel\",\n",
+    "    totals, x=\"value\", y=\"unit_name\", color=\"psr_type\",\n",
     "    orientation=\"h\",\n",
     "    title=\"Top 10 Generation Units by Total Output — France\",\n",
     "    labels={\"value\": \"Total Generation (MWh)\", \"unit_name\": \"\"},\n",
@@ -1160,7 +1147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0c1a95b",
+   "id": "7afdba33",
    "metadata": {},
    "source": [
     "## 3. Nuclear Plants — Hourly Profiles"
@@ -1169,13 +1156,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "236a1145",
+   "id": "8678013f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T14:55:32.960694Z",
-     "iopub.status.busy": "2026-02-15T14:55:32.960451Z",
-     "iopub.status.idle": "2026-02-15T14:55:32.992742Z",
-     "shell.execute_reply": "2026-02-15T14:55:32.992026Z"
+     "iopub.execute_input": "2026-02-15T15:03:40.933922Z",
+     "iopub.status.busy": "2026-02-15T15:03:40.933809Z",
+     "iopub.status.idle": "2026-02-15T15:03:40.967257Z",
+     "shell.execute_reply": "2026-02-15T15:03:40.966757Z"
     }
    },
    "outputs": [
@@ -2235,7 +2222,7 @@
     }
    ],
    "source": [
-    "df_nuclear = df[df[\"psr_type\"] == \"B14\"].copy()\n",
+    "df_nuclear = df[df[\"psr_type\"] == \"Nuclear\"].copy()\n",
     "\n",
     "# Pick top 5 nuclear units by total output\n",
     "top_nuclear = (\n",
@@ -2254,7 +2241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "585bc348",
+   "id": "c629a5f2",
    "metadata": {},
    "source": [
     "## 4. Gas Plants — France"
@@ -2263,13 +2250,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "48701b73",
+   "id": "5ab5a012",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T14:55:32.997025Z",
-     "iopub.status.busy": "2026-02-15T14:55:32.996909Z",
-     "iopub.status.idle": "2026-02-15T14:55:33.042134Z",
-     "shell.execute_reply": "2026-02-15T14:55:33.041206Z"
+     "iopub.execute_input": "2026-02-15T15:03:40.969303Z",
+     "iopub.status.busy": "2026-02-15T15:03:40.969161Z",
+     "iopub.status.idle": "2026-02-15T15:03:41.013170Z",
+     "shell.execute_reply": "2026-02-15T15:03:41.012656Z"
     }
    },
    "outputs": [
@@ -3677,7 +3664,7 @@
     }
    ],
    "source": [
-    "df_gas = df[df[\"psr_type\"] == \"B04\"].copy()\n",
+    "df_gas = df[df[\"psr_type\"] == \"Fossil Gas\"].copy()\n",
     "\n",
     "fig = px.line(\n",
     "    df_gas, x=\"timestamp\", y=\"value\", color=\"unit_name\",\n",
@@ -3689,7 +3676,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f255e2b0",
+   "id": "b3e992d7",
    "metadata": {},
    "source": [
     "## 5. Unit Count by Fuel Type"
@@ -3698,13 +3685,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6981cea9",
+   "id": "47482dc9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T14:55:33.043932Z",
-     "iopub.status.busy": "2026-02-15T14:55:33.043824Z",
-     "iopub.status.idle": "2026-02-15T14:55:33.067530Z",
-     "shell.execute_reply": "2026-02-15T14:55:33.066846Z"
+     "iopub.execute_input": "2026-02-15T15:03:41.014699Z",
+     "iopub.status.busy": "2026-02-15T15:03:41.014598Z",
+     "iopub.status.idle": "2026-02-15T15:03:41.033763Z",
+     "shell.execute_reply": "2026-02-15T15:03:41.033089Z"
     }
    },
    "outputs": [
@@ -4562,16 +4549,16 @@
    ],
    "source": [
     "unit_counts = (\n",
-    "    df.groupby(\"fuel\")[\"unit_name\"]\n",
+    "    df.groupby(\"psr_type\")[\"unit_name\"]\n",
     "    .nunique()\n",
     "    .reset_index(name=\"units\")\n",
     "    .sort_values(\"units\", ascending=True)\n",
     ")\n",
     "\n",
     "fig = px.bar(\n",
-    "    unit_counts, x=\"units\", y=\"fuel\", orientation=\"h\",\n",
+    "    unit_counts, x=\"units\", y=\"psr_type\", orientation=\"h\",\n",
     "    title=\"Number of Reporting Units by Fuel Type — France\",\n",
-    "    labels={\"units\": \"Generation Units (≥100 MW)\", \"fuel\": \"\"},\n",
+    "    labels={\"units\": \"Generation Units (≥100 MW)\", \"psr_type\": \"\"},\n",
     ")\n",
     "fig.show()"
    ]
